2010-01-20  Ben Murdoch  <benm@google.com>

Reviewed by Simon Hausmann.

        Touch Events are not sent to iframes
        https://bugs.webkit.org/show_bug.cgi?id=33894

        Testcase to verify that touch events are sent to iframes when the main frame document does not have any touch event listeners installed.

        * fast/events/touch/resources: Added.
        * fast/events/touch/resources/touch-inside-iframe2.html: Added.
        * fast/events/touch/touch-inside-iframe-expected.txt: Added.
        * fast/events/touch/touch-inside-iframe.html: Added.
2010-01-20  Ben Murdoch  <benm@google.com>

        Reviewed by Simon Hausmann.

        Touch Events are not sent to iframes
        https://bugs.webkit.org/show_bug.cgi?id=33894

        Fix the touch event handler so it does not bail out early if the main frame document does not have any touch listeners registered, as there may be embedded iframes that have registered for touch events.

        Test: fast/events/touch/touch-inside-iframe.html

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleTouchEvent): Instead of looking at the document of the main frame to see if touch event listeners are registered, look at the document of the target element to account for iframes.

Canonical link: https://commits.webkit.org/44996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53597 268f45cc-cd09-0410-ab3c-d52691b4dbfc